[gd_scene load_steps=7 format=3 uid="uid://bpvvc1ntu1v3e"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_3hhjn"]

[sub_resource type="Animation" id="Animation_hihwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(41, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:horizontal_alignment")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_4xfwx"]
resource_name = "enlarge"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 158)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1280, 118)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:horizontal_alignment")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [86]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_meegq"]
_data = {
"RESET": SubResource("Animation_hihwp"),
"enlarge": SubResource("Animation_4xfwx")
}

[sub_resource type="InputEventKey" id="InputEventKey_kksy7"]
keycode = 82

[sub_resource type="Shortcut" id="Shortcut_dtybm"]
events = [SubResource("InputEventKey_kksy7")]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_3hhjn")

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.498039)

[node name="Paused" type="Label" parent="PauseOverlay"]
layout_mode = 0
offset_top = 158.0
offset_right = 1280.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 86
text = "PAUSED"
horizontal_alignment = 1

[node name="Time" type="Label" parent="."]
offset_left = 14.0
offset_top = 11.0
offset_right = 55.0
offset_bottom = 34.0
text = "0.000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Time"]
libraries = {
"": SubResource("AnimationLibrary_meegq")
}

[node name="Pause" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 28.0
grow_horizontal = 0
focus_mode = 0
toggle_mode = true
text = "P"

[node name="Restart" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = 56.0
grow_horizontal = 0
toggle_mode = true
shortcut = SubResource("Shortcut_dtybm")
text = "R"

[node name="Menu" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 4.0
offset_right = -32.0
offset_bottom = 28.0
grow_horizontal = 0
text = "M"

[node name="Quit" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_top = 4.0
offset_right = -60.0
offset_bottom = 28.0
grow_horizontal = 0
toggle_mode = true
text = "Q"

[connection signal="toggled" from="Pause" to="." method="_on_pause_toggled"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
